syntax = "proto3";

package ellmo.v1;

import "google/protobuf/timestamp.proto";

/*  Eval represents a unique eval. */
message Eval {
  string name = 1; // ID of eval
}

message VersionedPrompt {
  string name = 1; // ID of prompt
  string version = 2; // Version of prompt
}

/*  EvalScore represents a single score of an eval. */
message EvalScore {
    string eval_hash = 1; // Hash of the eval input/expected
    float score = 2; // Score of the eval
}

/*  RecordEvalRequest represents a request to record an eval run. */
message RecordEvalRequest {
  Eval eval = 1; // Eval that was run
  VersionedPrompt prompt = 2; // Prompt being evaluated
  optional string base_version = 3; // Base version of prompt to compare against (if not defined, the previous version will be used)
  repeated EvalScore eval_scores = 4; // List of eval scores
}

/* EvalOutcome represents the outcome of an eval. */
enum EvalOutcome {
    IMPROVEMENT = 0;
    REGRESSION = 1;
    NO_CHANGE = 3;
    UNKNOWN = 4;
}

/* MeaningfulEvalScore represents a meaningful eval score. */
message MeaningfulEvalScore {
    string eval_hash = 1; // Hash of the eval input/expected
    float previous_score = 2; // Previous score
    float current_score = 3; // Current score

    EvalOutcome outcome = 4; // Outcome of the eval
}

/*  RecordEvalResponse represents a response to a record eval request. */
message RecordEvalResponse {
    EvalOutcome outcome = 1; // Outcome of the eval
    repeated EvalScore previous_eval_scores = 2; // List of previous eval scores
    repeated MeaningfulEvalScore meaningful_eval_scores = 3; // Analysis of meaningful eval scores

    string message = 4; // Any message to the user
}
