syntax = "proto3";

package ellmo.v1;

import "google/protobuf/empty.proto";
import "ellmo/v1/span.proto";
import "ellmo/v1/test.proto";
import "ellmo/v1/eval.proto";

service EllmoService {
  rpc QueueTest(TestExecutionRequest) returns (google.protobuf.Empty) {}
  rpc ReportSpan(ReportSpanRequest) returns (google.protobuf.Empty) {}
  rpc RecordEval(RecordEvalRequest) returns (RecordEvalResponse) {}
}
