syntax = "proto3";

package ollyllm.v1;

import "google/protobuf/timestamp.proto";

/*  VersionedEval represents a unique eval. */
message VersionedEval {
  string name = 1; // ID of test
  string version = 2; // SemVer of test
}

message SingleEvalResult {
    oneof SingleEvalResultOneOf {
        bool error = 1; // Whether the eval errored

        int64 score = 2; // Eval score
        float percentage = 3; // Eval percentage
        bool result = 4; // Eval result
    }
}

/*  RecordEvalRequest represents a request to record an eval run. */
message RecordEvalRequest {
  VersionedEval versioned_eval = 1; // Unique eval
  repeated SingleEvalResult eval_results = 2; // List of eval results
}

enum EvalResult {
    IMPROVEMENT = 0;
    REGRESSION = 1;
    UNKNOWN = 2;
}

message RecordEvalResponse {
    EvalResult result = 1;
    repeated SingleEvalResult previous_eval_results = 2;
}

